--- a/datafusion/Cargo.toml
+++ b/datafusion/Cargo.toml
@@ -37,7 +37,7 @@ name = "datafusion"
 path = "src/lib.rs"
 
 [features]
-default = ["crypto_expressions", "regex_expressions", "unicode_expressions"]
+default = ["crypto_expressions", "regex_expressions", "unicode_expressions", "zstd"]
 simd = ["arrow/simd"]
 crypto_expressions = ["md-5", "sha2"]
 regex_expressions = ["regex", "lazy_static"]
@@ -45,9 +45,13 @@ unicode_expressions = ["unicode-segmentation"]
 # Used for testing ONLY: causes all values to hash to the same value (test for collisions)
 force_hash_collisions = []
 
+zstd = ["parquet/zstd"]
 
 [dependencies]
 ahash = "0.7"
+hashbrown = { version = "0.11", features = ["raw"] }
+arrow = { version = "^5.2", features = ["prettyprint"] }
+parquet = { version = "^5.2", features = ["arrow", "snap", "brotli", "flate2", "lz4", "base64"], default-features = false }
 hashbrown = { version = "0.11", features = ["raw"] }
 arrow = { version = "^5.2", features = ["prettyprint"] }
 parquet = { version = "^5.2", features = ["arrow"] }
