--- a/datafusion/Cargo.toml
+++ b/datafusion/Cargo.toml
@@ -37,17 +37,18 @@ name = "datafusion"
 path = "src/lib.rs"
 
 [features]
-default = ["crypto_expressions", "regex_expressions", "unicode_expressions"]
+default = ["crypto_expressions", "regex_expressions", "unicode_expressions", "zstd"]
 simd = ["arrow/simd"]
 crypto_expressions = ["md-5", "sha2"]
 regex_expressions = ["regex", "lazy_static"]
 unicode_expressions = ["unicode-segmentation"]
+zstd = ["parquet/zstd"]
 
 [dependencies]
 ahash = "0.7"
 hashbrown = "0.11"
 arrow = { version = "5.0", features = ["prettyprint"] }
-parquet = { version = "5.0", features = ["arrow"] }
+parquet = { version = "5.0", features = ["arrow", "snap", "brotli", "flate2", "lz4", "base64"], default-features = false }
 sqlparser = "0.9.0"
 paste = "^1.0"
 num_cpus = "1.13.0"
