--- a/ballista/rust/core/Cargo.toml
+++ b/ballista/rust/core/Cargo.toml
@@ -37,7 +37,8 @@ hashbrown = "0.11"
 log = "0.4"
 prost = "0.8"
 serde = {version = "1", features = ["derive"]}
-sqlparser = "0.9.0"
+#sqlparser = "0.9.0"
+sqlparser = { git = "https://github.com/Igosuki/sqlparser-rs", branch = "enable_map_access_for_numbers"}
 tokio = "1.0"
 tonic = "0.5"
 uuid = { version = "0.8", features = ["v4"] }
