--- a/datafusion/Cargo.toml
+++ b/datafusion/Cargo.toml
@@ -52,7 +52,7 @@ avro = ["avro-rs", "num-traits"]
 ahash = "0.7"
 hashbrown = { version = "0.11", features = ["raw"] }
 arrow = { version = "6.0.0", features = ["prettyprint"] }
-parquet = { version = "6.0.0", features = ["arrow"] }
+parquet = { version = "6.0.0", features = ["arrow", "snap", "brotli", "flate2", "lz4", "base64"], default-features = false }
 sqlparser = "0.12"
 paste = "^1.0"
 num_cpus = "1.13.0"
