--- a/datafusion/Cargo.toml
+++ b/datafusion/Cargo.toml
@@ -47,13 +47,14 @@ pyarrow = ["pyo3", "arrow/pyarrow"]
 # Used for testing ONLY: causes all values to hash to the same value (test for collisions)
 force_hash_collisions = []
 # Used to enable the avro format
+parquet-compress = ["parquet/brotli"]
 avro = ["avro-rs", "num-traits"]
 
 [dependencies]
 ahash = { version = "0.7", default-features = false }
 hashbrown = { version = "0.11", features = ["raw"] }
 arrow = { version = "6.4.0", features = ["prettyprint"] }
-parquet = { version = "6.4.0", features = ["arrow"] }
+parquet = { version = "6.4.0", features = ["arrow", "snap", "flate2", "lz4", "base64"], default-features = false }
 sqlparser = "0.13"
 paste = "^1.0"
 num_cpus = "1.13.0"
