--- a/datafusion/Cargo.toml
+++ b/datafusion/Cargo.toml
@@ -46,13 +46,14 @@ unicode_expressions = ["unicode-segmentation"]
 # Used for testing ONLY: causes all values to hash to the same value (test for collisions)
 force_hash_collisions = []
 # Used to enable the avro format
+parquet-compress = ["parquet/brotli"]
 avro = ["avro-rs", "num-traits"]
 
 [dependencies]
 ahash = "0.7"
 hashbrown = { version = "0.11", features = ["raw"] }
 arrow = { version = "6.0.0", features = ["prettyprint"] }
-parquet = { version = "6.0.0", features = ["arrow", "snap", "brotli", "flate2", "lz4", "base64"], default-features = false }
+parquet = { version = "6.0.0", features = ["arrow", "snap", "flate2", "lz4", "base64"], default-features = false }
 sqlparser = "0.12"
 paste = "^1.0"
 num_cpus = "1.13.0"
