--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,3 +37,4 @@ codegen-units = 1
 [patch.crates-io]
 #arrow2 = { git = "https://github.com/jorgecarleitao/arrow2.git", rev = "b617331354fd8c64c2126b6f4fc6f9935f7971ab" }
 arrow2 = { git = "https://github.com/Igosuki/arrow2.git", branch = "decimal" }
+#arrow2 = { path = "/home/geps/dev/oss/arrow2" }
